# Agentic-dev-team

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  ORCHESTRATION_DIRECTIVE.md  README.md  TECHLEAD_ORCHESTRATION_RULES.md  agents_cmd  claude_hooks_setup.md  docker-compose.yml  orchestrator.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  quick_setup.md  quick_setup.sh  requirements.txt  test-chromium.js  test-results.xml
.claude/: agent_registry.json  settings.json
.claude/agents/: Architect.md  BackendEngineer.md  DataEngineer.md  DataScientist.md  DeliveryLead.md  FrontendEngineer.md  ProductOwner.md  QA.md  Researcher.md  SelfHealing.md  TechLead.md  backend-api-engineer.md  data-engineer.md  data-scientist-analytics.md  delivery-lead-release.md  domain-researcher.md  dynamic_cache_optimization_1181.md  frontend-ui-engineer.md  meta-agent-orchestrator.md  product-owner.md  qa-playwright-tester.md  rural-clinic-researcher.md  (+3 more)
.github/: markdown-link-check.json
agent-instructions/: 01-TechLead.md  02-Researcher.md  03-Architect.md  04-ProductOwner.md  05-DataEngineer.md  06-DataScientist.md  07-BackendEngineer.md  08-FrontendEngineer.md  09-QA.md  10-SelfHealing.md  11-DeliveryLead.md  README.md
agents/: meta_agent.yaml
inputs/: problem.md
prompts/: context7.md  ethics_guardrails.md  ultra_think.md
scripts/: activate_agents.sh  bootstrap.sh  ci.sh  clean.sh  quick-clean.sh
specs/: NO_SHOW_SPEC.md  PRIMARY_SPEC.md  spec_template.md
tools/: agent_registry.py  agent_template_generator.py  agents_command.py  test_runner.py
workspace/: FIXES_APPLIED.md  FRONTEND_FIX_SUMMARY.md  launch-app.sh  start.sh  test_integration.py
(+57 files in other folders)
