[project]
name = "zero-error-autonomous"
version = "1.0.0"
description = "Zero-Error Autonomous Project Template with Context7 Standards - https://context7.com/"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.34.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.5.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.47.0",
    "pytest>=8.3.0",
    "pytest-playwright>=0.5.0",
    "rich>=13.7.0",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.3",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "redis>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",
]

[project.scripts]
orchestrator = "orchestrator:main"
test-runner = "tools.test_runner:main"
agent = "tools.agent_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers --capture=no"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "e2e: End-to-end tests with Playwright",
    "slow: Tests that take > 5 seconds",
    "edge: Edge case tests",
    "usecase: Use case tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true